== 0.1.8 2008-11-30
* 1 major enhancement
  * Moved base_uri normalization into request class and out of httparty module, fixing 
    the problem where base_uri was not always being normalized.

== 0.1.7 2008-11-30
* 1 major enhancement
  * fixed multiple class definitions overriding each others options
  
== 0.1.6 2008-11-26
* 1 major enhancement
  * now passing :query to set_form_data if post request to avoid content length errors
  
== 0.1.5 2008-11-14
* 2 major enhancements
  * Refactored send request method out into its own object.
  * Added :html format if you just want to do that.
  
== 0.1.4 2008-11-08
* 3 major enhancements:
  * Removed some cruft
  * Added ability to follow redirects automatically and turn that off (Alex Vollmer)

== 0.1.3 2008-08-22

* 3 major enhancements:
	* Added http_proxy key for setting proxy server and port (francxk@gmail.com)
	* Now raises exception when http error occurs (francxk@gmail.com)
	* Changed auto format detection from file extension to response content type (Jay Pignata)

== 0.1.2 2008-08-09

* 1 major enhancement:
	* default_params were not being appended to query string if option[:query] was blank

== 0.1.1 2008-07-30

* 2 major enhancement:
	* Added :basic_auth key for options when making a request
	* :query and :body both now work with query string or hash

== 0.1.0 2008-07-27

* 1 major enhancement:
  * Initial release