@@ -1,7 +1,8 @@
 == 0.1.8 2008-11-30
-* 1 major enhancement
+* 2 major enhancements
   * Moved base_uri normalization into request class and out of httparty module, fixing 
     the problem where base_uri was not always being normalized.
+  * Stupid simple support for HTTParty.get/post/put/delete. (jqr)
 
 == 0.1.7 2008-11-30
 * 1 major enhancement
